--- a/src/Site/MainBundle/Resources/config/validation.yml
+++ b/src/Site/MainBundle/Resources/config/validation.yml
@@ -23,4 +23,10 @@ Site\MainBundle\Entity\ClassRoom:
     properties:
         name:
             - NotBlank:
-                message: "Класс номера не может быть пустым"                                                                        
+                message: "Класс номера не может быть пустым"
+
+Site\MainBundle\Entity\Client:
+    properties:
+        fio:
+            - NotBlank:
+                message: "ФИО не может быть пустым"
