--- a/src/Site/MainBundle/Resources/config/routing/frontend/client.yml
+++ b/src/Site/MainBundle/Resources/config/routing/frontend/client.yml
@@ -2,6 +2,10 @@ frontend_registration14:
     path:     /registration14
     defaults: { _controller: "SiteMainBundle:Frontend/Auth:registration14" }
 
+frontend_registration15:
+    path:     /registration15
+    defaults: { _controller: "SiteMainBundle:Frontend/Auth:registration15" }
+
 frontend_client_create:
     path:     /create
     defaults: { _controller: "SiteMainBundle:Frontend/Client:create" }
