--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,11 +90,14 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
+    transport:  "%mailer_transport%"
+    host:       "%mailer_host%"
+    username:   "%mailer_user%"
+    password:   "%mailer_password%"
+    port:       "%mailer_port%"
+    encryption: "%mailer_encryption%"
     spool:     { type: memory }
+    auth_mode: login
 
 gregwar_image:
     fallback_image: /bundles/sitemain/frontend/images/fallback.jpg
