--- a/src/Site/MainBundle/Resources/config/services.yml
+++ b/src/Site/MainBundle/Resources/config/services.yml
@@ -3,3 +3,8 @@ services:
             class: Twig_Extensions_Extension_Intl
             tags:
                 - { name: twig.extension }
+    export.excel:
+      class: Site\MainBundle\Service\ClientService
+      arguments:
+          - @service_container
+          - @doctrine.orm.entity_manager
