--- a/src/Site/MainBundle/Resources/config/routing/backend/client.yml
+++ b/src/Site/MainBundle/Resources/config/routing/backend/client.yml
@@ -10,6 +10,10 @@ backend_client_new:
     path:     /new
     defaults: { _controller: "SiteMainBundle:Backend/Client:new" }
 
+backend_client_export:
+    path:     /export
+    defaults: { _controller: "SiteMainBundle:Backend/Client:export" }
+
 backend_client_create:
     path:     /create
     defaults: { _controller: "SiteMainBundle:Backend/Client:create" }
