--- a/src/Site/MainBundle/Resources/config/routing/frontend/register.yml
+++ b/src/Site/MainBundle/Resources/config/routing/frontend/register.yml
@@ -1,3 +1,7 @@
+frontend_register_remember:
+    path:     /remember
+    defaults: { _controller: "SiteMainBundle:Frontend/Auth:remember" }
+
 frontend_register_index:
     path:     /{register_date}
     defaults: { _controller: "SiteMainBundle:Frontend/Auth:registration" }
